--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: #2e2e2e;
   color: white;
+  padding: 8px;
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  margin: 0px;
+  text-align: center;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card {
+  display: flex;
+  border-radius: 10px;
+  margin: 8px;
+  background-color: #606060;
+  width: 98%;
+}
+
+img {
+  margin: 10px;
+  width: 180px;
+}
+
+.card:hover {
+  background-color: #7a7a7a;
+  border: 3px solid limegreen;
+}
+
+.controls {
+  background-color: #a4a4a4;
+  margin-left: auto;
+  min-width: 200px;
+  margin-right: 25px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  padding: 5px;
+  border-radius: 2px;
+}
+
+.alive {
+  color: greenyellow;
+  text-shadow: 1px 1px #2e2e2e;
+}
+
+.dead {
+  color: red;
+}
+
+.buttonContainer {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px auto;
+  width: 230px
+}
+
+.buttonContainer button {
+  width: 40px;
+  height: 35px;
 }
